--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <div id="tela" onclick="verificarClique(event)"></div>
 
 </body>
+<script src="js/gerenciamentodb.js"></script>
 <script src="js/central.js"></script>
 <script src="js/facial.js"></script>
 <script src="js/folha.js"></script>
