--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/facial.css">
     <link rel="stylesheet" type="text/css" href="css/folha.css">
     <link rel="stylesheet" type="text/css" href="css/epi.css">
+    <link rel="stylesheet" type="text/css" href="css/despesas.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
@@ -34,5 +35,6 @@
 <script src="js/facial.js"></script>
 <script src="js/folha.js"></script>
 <script src="js/epi.js"></script>
+<script src="js/despesas.js"></script>
 
 </html>
