--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
     <div class="toolbar">
-        <button class="menu-btn" onclick="esconderMenus()">
+        <button class="menu-btn" onclick="mostrarMenus()">
             <div></div>
             <div></div>
             <div></div>
