feat: orçamentos - fase 3

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <script src="js/facial.js"></script>
 <script src="js/folha.js"></script>
 <script src="js/epi.js"></script>
+<script src="js/orcamentos.js"></script>
 <script src="js/despesas.js"></script>
 
 </html>
