--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/facial.css">
     <link rel="stylesheet" type="text/css" href="css/folha.css">
     <link rel="stylesheet" type="text/css" href="css/epi.css">
+    <link rel="stylesheet" type="text/css" href="css/orcamentos.css">
     <link rel="stylesheet" type="text/css" href="css/despesas.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
