--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@
 <script src="js/epi.js"></script>
 <script src="js/orcamentos.js"></script>
 <script src="js/despesas.js"></script>
+<script src="js/precificacao.js"></script>
 
 </html>
