--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/epi.css">
     <link rel="stylesheet" type="text/css" href="css/orcamentos.css">
     <link rel="stylesheet" type="text/css" href="css/despesas.css">
+    <link rel="stylesheet" type="text/css" href="css/precificacao.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
