--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
 <script src="js/orcamentos.js"></script>
 <script src="js/despesas.js"></script>
 <script src="js/precificacao.js"></script>
+<script src="js/parceiros.js"></script>
 
 </html>
