--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reconstrular</title>
-    <link rel="stylesheet" type="text/css" href="css/estilo.css">
-    <link rel="stylesheet" type="text/css" href="css/facial.css">
-    <link rel="stylesheet" type="text/css" href="css/folha.css">
-    <link rel="stylesheet" type="text/css" href="css/epi.css">
-    <link rel="stylesheet" type="text/css" href="css/orcamentos.css">
-    <link rel="stylesheet" type="text/css" href="css/despesas.css">
-    <link rel="stylesheet" type="text/css" href="css/precificacao.css">
+    <link rel="stylesheet" type="text/css" href="css/estilo.css?v=1.0">
+    <link rel="stylesheet" type="text/css" href="css/facial.css?v=1.0">
+    <link rel="stylesheet" type="text/css" href="css/folha.css?v=1.0">
+    <link rel="stylesheet" type="text/css" href="css/epi.css?v=1.0">
+    <link rel="stylesheet" type="text/css" href="css/orcamentos.css?v=1.0">
+    <link rel="stylesheet" type="text/css" href="css/despesas.css?v=1.0">
+    <link rel="stylesheet" type="text/css" href="css/precificacao.css?v=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
@@ -32,14 +32,14 @@
     <div id="tela" onclick="verificarClique(event)"></div>
 
 </body>
-<script src="js/gerenciamentodb.js"></script>
-<script src="js/central.js"></script>
-<script src="js/facial.js"></script>
-<script src="js/folha.js"></script>
-<script src="js/epi.js"></script>
-<script src="js/orcamentos.js"></script>
-<script src="js/despesas.js"></script>
-<script src="js/precificacao.js"></script>
-<script src="js/parceiros.js"></script>
+<script src="js/gerenciamentodb.js?v=1.0"></script>
+<script src="js/central.js?v=1.0"></script>
+<script src="js/facial.js?v=1.0"></script>
+<script src="js/folha.js?v=1.0"></script>
+<script src="js/epi.js?v=1.0"></script>
+<script src="js/orcamentos.js?v=1.0"></script>
+<script src="js/despesas.js?v=1.0"></script>
+<script src="js/precificacao.js?v=1.0"></script>
+<script src="js/parceiros.js?v=1.0"></script>
 
 </html>
