--- a/index.html
+++ b/index.html
@@ -41,5 +41,8 @@
 <script src="js/despesas.js?v=1.0"></script>
 <script src="js/precificacao.js?v=1.0"></script>
 <script src="js/parceiros.js?v=1.0"></script>
+<script src="js/colaboradores.js?v=1.0"></script>
+<script src="js/obras.js"></script>
+<script src="js/formulario.js"></script>
 
 </html>
