--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <script src="js/parceiros.js?v=1.0"></script>
 <script src="js/colaboradores.js?v=1.0"></script>
 <script src="js/obras.js"></script>
+<script src="js/clientes.js"></script>
 <script src="js/formulario.js"></script>
 
 </html>
