--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/orcamentos.css?v=1.0">
     <link rel="stylesheet" type="text/css" href="css/despesas.css?v=1.0">
     <link rel="stylesheet" type="text/css" href="css/precificacao.css?v=1.0">
+    <link rel="stylesheet" type="text/css" href="css/formulario.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
