--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reconstrular</title>
-    <link rel="stylesheet" type="text/css" href="css/estilo.css?v=1.0">
+    <link rel="stylesheet" type="text/css" href="css/estilo.css?v=1.1">
     <link rel="stylesheet" type="text/css" href="css/facial.css?v=1.0">
     <link rel="stylesheet" type="text/css" href="css/folha.css?v=1.0">
     <link rel="stylesheet" type="text/css" href="css/epi.css?v=1.0">
     <link rel="stylesheet" type="text/css" href="css/orcamentos.css?v=1.0">
-    <link rel="stylesheet" type="text/css" href="css/despesas.css?v=1.0">
+    <link rel="stylesheet" type="text/css" href="css/despesas.css?v=1.1">
     <link rel="stylesheet" type="text/css" href="css/precificacao.css?v=1.0">
     <link rel="stylesheet" type="text/css" href="css/formulario.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,17 +37,17 @@
 </body>
 
 <script src="js/gerenciamentodb.js?v=1.0"></script>
-<script src="js/central.js?v=1.0"></script>
-<script src="js/facial.js?v=1.0"></script>
-<script src="js/folha.js?v=1.0"></script>
+<script src="js/central.js?v=1.1"></script>
+<script src="js/facial.js?v=1.1"></script>
+<script src="js/folha.js?v=1.1"></script>
 <script src="js/epi.js?v=1.0"></script>
-<script src="js/orcamentos.js?v=1.0"></script>
-<script src="js/despesas.js?v=1.0"></script>
-<script src="js/precificacao.js?v=1.0"></script>
+<script src="js/orcamentos.js?v=1.1"></script>
+<script src="js/despesas.js?v=1.1"></script>
+<script src="js/precificacao.js?v=1.1"></script>
 <script src="js/parceiros.js?v=1.0"></script>
 <script src="js/colaboradores.js?v=1.0"></script>
-<script src="js/obras.js"></script>
-<script src="js/clientes.js"></script>
-<script src="js/formulario.js"></script>
+<script src="js/obras.js?v=1.0"></script>
+<script src="js/clientes.js?v=1.0"></script>
+<script src="js/formulario.js?v=1.0"></script>
 
 </html>
