--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/despesas.css?v=1.1">
     <link rel="stylesheet" type="text/css" href="css/precificacao.css?v=1.0">
     <link rel="stylesheet" type="text/css" href="css/formulario.css">
+    <link rel="stylesheet" type="text/css" href="css/obras.css?v=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
@@ -46,7 +47,7 @@
 <script src="js/precificacao.js?v=1.1"></script>
 <script src="js/parceiros.js?v=1.0"></script>
 <script src="js/colaboradores.js?v=1.0"></script>
-<script src="js/obras.js?v=1.0"></script>
+<script src="js/obras.js?v=1.1"></script>
 <script src="js/clientes.js?v=1.0"></script>
 <script src="js/formulario.js?v=1.0"></script>
 
