--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="css/precificacao.css?v=1.0">
     <link rel="stylesheet" type="text/css" href="css/formulario.css">
     <link rel="stylesheet" type="text/css" href="css/obras.css?v=1.1">
+    <link rel="stylesheet" type="text/css" href="css/chat.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
@@ -50,5 +51,7 @@
 <script src="js/obras.js?v=1.1"></script>
 <script src="js/clientes.js?v=1.0"></script>
 <script src="js/formulario.js?v=1.0"></script>
+<script src="js/chat.js"></script>
+<script src="js/websocket.js"></script>
 
 </html>
