--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.3">
     <title>Reconstrular</title>
-    <link rel="stylesheet" type="text/css" href="css/estilo.css?v=1.2">
-    <link rel="stylesheet" type="text/css" href="css/facial.css?v=1.0">
-    <link rel="stylesheet" type="text/css" href="css/folha.css?v=1.0">
-    <link rel="stylesheet" type="text/css" href="css/epi.css?v=1.0">
-    <link rel="stylesheet" type="text/css" href="css/orcamentos.css?v=1.0">
-    <link rel="stylesheet" type="text/css" href="css/despesas.css?v=1.1">
-    <link rel="stylesheet" type="text/css" href="css/precificacao.css?v=1.0">
+    <link rel="stylesheet" type="text/css" href="css/estilo.css?v=1.3">
+    <link rel="stylesheet" type="text/css" href="css/facial.css?v=1.3">
+    <link rel="stylesheet" type="text/css" href="css/folha.css?v=1.3">
+    <link rel="stylesheet" type="text/css" href="css/epi.css?v=1.3">
+    <link rel="stylesheet" type="text/css" href="css/orcamentos.css?v=1.3">
+    <link rel="stylesheet" type="text/css" href="css/despesas.css?v=1.3">
+    <link rel="stylesheet" type="text/css" href="css/precificacao.css?v=1.3">
     <link rel="stylesheet" type="text/css" href="css/formulario.css">
-    <link rel="stylesheet" type="text/css" href="css/obras.css?v=1.1">
-    <link rel="stylesheet" type="text/css" href="css/chat.css">
+    <link rel="stylesheet" type="text/css" href="css/obras.css?v=1.3">
+    <link rel="stylesheet" type="text/css" href="css/chat.css?v=1.3">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
@@ -27,31 +27,27 @@
 <body>
 
     <div class="toolbar">
-        <button class="menu-btn" onclick="mostrarMenus()">
-            <div></div>
-            <div></div>
-            <div></div>
-        </button>
+        <img src="imagens/menu.png" class="menu-btn" onclick="mostrarMenus()">
         <span></span>
     </div>
     <div id="tela" onclick="verificarClique(event)"></div>
 
 </body>
 
-<script src="js/gerenciamentodb.js?v=1.0"></script>
-<script src="js/central.js?v=1.1"></script>
-<script src="js/facial.js?v=1.1"></script>
-<script src="js/folha.js?v=1.1"></script>
-<script src="js/epi.js?v=1.0"></script>
-<script src="js/orcamentos.js?v=1.1"></script>
-<script src="js/despesas.js?v=1.1"></script>
-<script src="js/precificacao.js?v=1.1"></script>
-<script src="js/parceiros.js?v=1.0"></script>
-<script src="js/colaboradores.js?v=1.0"></script>
-<script src="js/obras.js?v=1.1"></script>
-<script src="js/clientes.js?v=1.0"></script>
-<script src="js/formulario.js?v=1.0"></script>
-<script src="js/chat.js"></script>
-<script src="js/websocket.js"></script>
+<script src="js/gerenciamentodb.js?v=1.3"></script>
+<script src="js/central.js?v=1.3"></script>
+<script src="js/facial.js?v=1.3"></script>
+<script src="js/folha.js?v=1.3"></script>
+<script src="js/epi.js?v=1.3"></script>
+<script src="js/orcamentos.js?v=1.3"></script>
+<script src="js/despesas.js?v=1.3"></script>
+<script src="js/precificacao.js?v=1.3"></script>
+<script src="js/parceiros.js?v=1.3"></script>
+<script src="js/colaboradores.js?v=1.3"></script>
+<script src="js/obras.js?v=1.3"></script>
+<script src="js/clientes.js?v=1.3"></script>
+<script src="js/formulario.js?v=1.3"></script>
+<script src="js/chat.js?v=1.3"></script>
+<script src="js/websocket.js?v=1.3"></script>
 
 </html>
