--- a/index.html
+++ b/index.html
@@ -29,13 +29,17 @@
     <div class="toolbar">
         <img src="imagens/menu.png" class="menu-btn" onclick="mostrarMenus()">
         <span></span>
+        <div class="cabecalho-usuario"></div>
     </div>
     <div id="tela" onclick="verificarClique(event)"></div>
 
 </body>
 
+
 <script src="js/popup.js?v=1.6"></script>
-<script src="js/gerenciamentodb.js?v=1.6"></script>
+<script src="js/gdb.js?v=1.6"></script>
+<script src="js/ferramentas.js?v=1.6"></script>
+<script src="js/tabelas.js?v=1.6"></script>
 <script src="js/central.js?v=1.6"></script>
 <script src="js/facial.js?v=1.6"></script>
 <script src="js/folha.js?v=1.6"></script>
@@ -49,5 +53,6 @@
 <script src="js/clientes.js?v=1.6"></script>
 <script src="js/chat.js?v=1.6"></script>
 <script src="js/websocket.js?v=1.6"></script>
+
 
 </html>
